--- a/download.html
+++ b/download.html
@@ -280,7 +280,7 @@
         <!-- Featured Download Card -->
         <section class="page-section" id="latest-release">
             <div class="content-width">
-                <div class="download-hero-card">
+                <div class="download-hero-card reveal">
                     <div class="download-hero-content">
                         <div class="download-hero-header">
                             <div class="download-hero-icon">
@@ -359,13 +359,13 @@
         <!-- System Requirements -->
         <section class="page-section" id="requirements">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Prerequisites</span>
                     <h2 class="section-title">System requirements</h2>
                     <p class="section-subtitle">Make sure your system meets these requirements for the best experience.</p>
                 </div>
                 <div class="card-grid">
-                    <article class="card">
+                    <article class="card reveal">
                         <div class="card-icon">
                             <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#00f5d4" stroke-width="1.5">
                                 <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
@@ -380,7 +380,7 @@
                             <li>64-bit architecture required</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal reveal-delay-1">
                         <div class="card-icon">
                             <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#00f5d4" stroke-width="1.5">
                                 <rect x="4" y="4" width="16" height="16" rx="2" ry="2"/>
@@ -402,7 +402,7 @@
                             <li>1280x720 display or higher</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal reveal-delay-2">
                         <div class="card-icon">
                             <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#00f5d4" stroke-width="1.5">
                                 <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
@@ -422,41 +422,41 @@
         <!-- Installation Guide -->
         <section class="page-section" id="installation">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Setup</span>
                     <h2 class="section-title">Installation guide</h2>
                     <p class="section-subtitle">Get up and running in under five minutes.</p>
                 </div>
                 <div class="install-steps">
-                    <div class="install-step">
+                    <div class="install-step reveal">
                         <div class="step-number">1</div>
                         <div class="step-content">
                             <h3>Download the installer</h3>
                             <p>Click the download button above to get the latest Windows installer. The file is approximately 98 MB.</p>
                         </div>
                     </div>
-                    <div class="install-step">
+                    <div class="install-step reveal reveal-delay-1">
                         <div class="step-number">2</div>
                         <div class="step-content">
                             <h3>Verify the download</h3>
                             <p>Compare the file hash posted on GitHub releases to ensure download integrity before running.</p>
                         </div>
                     </div>
-                    <div class="install-step">
+                    <div class="install-step reveal reveal-delay-2">
                         <div class="step-number">3</div>
                         <div class="step-content">
                             <h3>Run the installer</h3>
                             <p>Double-click the .exe file and follow the installation wizard. Choose your preferred install location.</p>
                         </div>
                     </div>
-                    <div class="install-step">
+                    <div class="install-step reveal reveal-delay-3">
                         <div class="step-number">4</div>
                         <div class="step-content">
                             <h3>Enter your API key</h3>
                             <p>On first launch, paste your Torn API key. Get one from <a href="https://www.torn.com/preferences.php#tab=api" target="_blank" rel="noopener noreferrer">Torn Settings &rarr; API Keys</a>.</p>
                         </div>
                     </div>
-                    <div class="install-step">
+                    <div class="install-step reveal reveal-delay-4">
                         <div class="step-number">5</div>
                         <div class="step-content">
                             <h3>Start tracking</h3>
@@ -470,14 +470,14 @@
         <!-- Recent Releases (Limited to 3) -->
         <section class="page-section" id="past-releases">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Recent</span>
                     <h2 class="section-title">Latest releases</h2>
                     <p class="section-subtitle">Recent versions with download links. See the full release history for older versions.</p>
                 </div>
                 <div class="releases-timeline releases-compact">
                     <!-- Current Release -->
-                    <article class="release-entry release-current">
+                    <article class="release-entry release-current reveal">
                         <div class="release-marker">
                             <div class="release-dot current"></div>
                             <div class="release-line"></div>
@@ -502,7 +502,7 @@
                     </article>
 
                     <!-- v2.7.8 -->
-                    <article class="release-entry">
+                    <article class="release-entry reveal reveal-delay-1">
                         <div class="release-marker">
                             <div class="release-dot"></div>
                             <div class="release-line"></div>
@@ -522,7 +522,7 @@
                     </article>
 
                     <!-- v2.7.7 -->
-                    <article class="release-entry">
+                    <article class="release-entry reveal reveal-delay-2">
                         <div class="release-marker">
                             <div class="release-dot"></div>
                         </div>
@@ -562,12 +562,12 @@
         <!-- Verification Section -->
         <section class="page-section" id="verification">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Security</span>
                     <h2 class="section-title">Verify your download</h2>
                     <p class="section-subtitle">Always verify installer integrity before running. Match the hash from GitHub releases.</p>
                 </div>
-                <div class="verification-card">
+                <div class="verification-card reveal">
                     <div class="verification-info">
                         <h3>How to verify on Windows</h3>
                         <p>Open PowerShell and run this command to calculate the file hash:</p>
@@ -600,33 +600,33 @@
         <!-- FAQ Section -->
         <section class="page-section" id="faq">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Support</span>
                     <h2 class="section-title">Frequently asked questions</h2>
                     <p class="section-subtitle">Common questions about downloading and installing Torn Target Tracker.</p>
                 </div>
                 <div class="faq-grid">
-                    <article class="card faq-card">
+                    <article class="card faq-card reveal">
                         <h3>Is this safe to download?</h3>
                         <p>Yes. Torn Target Tracker is open source under the MIT license. You can inspect the code on GitHub and verify the installer hash before running.</p>
                     </article>
-                    <article class="card faq-card">
+                    <article class="card faq-card reveal reveal-delay-1">
                         <h3>Why does antivirus flag it?</h3>
                         <p>Some antivirus tools sandbox unsigned Electron apps. This is a false positive. Verify the hash, then add an exception after confirming integrity.</p>
                     </article>
-                    <article class="card faq-card">
+                    <article class="card faq-card reveal reveal-delay-2">
                         <h3>Will it work on Mac or Linux?</h3>
                         <p>Currently only Windows is officially supported. Mac and Linux builds may be available in future releases based on community interest.</p>
                     </article>
-                    <article class="card faq-card">
+                    <article class="card faq-card reveal">
                         <h3>How do I update?</h3>
                         <p>Download the latest installer and run it over your existing installation. Your settings and target groups will be preserved.</p>
                     </article>
-                    <article class="card faq-card">
+                    <article class="card faq-card reveal reveal-delay-1">
                         <h3>Where is my data stored?</h3>
                         <p>All data is stored locally on your machine. Your API key is encrypted with AES-256. No data is sent to external servers beyond Torn's API.</p>
                     </article>
-                    <article class="card faq-card">
+                    <article class="card faq-card reveal reveal-delay-2">
                         <h3>How do I report issues?</h3>
                         <p>Open an issue on <a href="https://github.com/skillerious/TornTargetTrackerV2/issues" target="_blank" rel="noopener noreferrer">GitHub Issues</a> with your version number and steps to reproduce the problem.</p>
                     </article>
@@ -637,7 +637,7 @@
         <!-- CTA Section -->
         <section class="page-section cta-section">
             <div class="content-width">
-                <div class="cta-card">
+                <div class="cta-card reveal">
                     <div class="cta-content">
                         <h2>Ready to start tracking?</h2>
                         <p>Download Torn Target Tracker and get your operations running in minutes.</p>
