--- a/guide.html
+++ b/guide.html
@@ -270,13 +270,13 @@
 
         <section class="page-section" id="guide-map">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Guide map</span>
                     <h2 class="section-title">Pick your path</h2>
                     <p class="section-subtitle">Jump straight to the part you need: setup, operating cadence, or recovery steps.</p>
                 </div>
                 <div class="card-grid guide-nav-grid">
-                    <article class="card card-link">
+                    <article class="card card-link reveal">
                         <div class="kicker">Start fast</div>
                         <h3><a href="#quickstart">Install and secure</a></h3>
                         <p>Install the latest build, plug in a scoped API key, and set your refresh timer.</p>
@@ -285,7 +285,7 @@
                             <a class="pill pill-link" href="#reliability">Safety</a>
                         </div>
                     </article>
-                    <article class="card card-link">
+                    <article class="card card-link reveal reveal-delay-1">
                         <div class="kicker">Operate</div>
                         <h3><a href="#feature-deep-dive">Run chains with focus</a></h3>
                         <p>Use target groups, Attack Tracker, and quick filters to stay on top of windows.</p>
@@ -294,7 +294,7 @@
                             <a class="pill pill-link" href="#playbook">Playbook</a>
                         </div>
                     </article>
-                    <article class="card card-link">
+                    <article class="card card-link reveal reveal-delay-2">
                         <div class="kicker">Recover</div>
                         <h3><a href="#support">Backups and help</a></h3>
                         <p>Export data, verify installs, and share logs when something looks off.</p>
@@ -309,13 +309,13 @@
 
         <section class="page-section" id="quickstart">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Setup</span>
                     <h2 class="section-title">Quickstart checklist</h2>
                     <p class="section-subtitle">Follow these steps once and you are ready for every chain. Each step matches the app layout so you do not have to hunt for settings.</p>
                 </div>
                 <div class="card-grid">
-                    <article class="card">
+                    <article class="card reveal">
                         <div class="kicker">Step 1</div>
                         <h3>Install and connect</h3>
                         <p>Run the v2.7.9 installer, open the app, and drop in your Torn API key.</p>
@@ -325,7 +325,7 @@
                             <li>Verify the installer hash on GitHub before first launch.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal reveal-delay-1">
                         <div class="kicker">Step 2</div>
                         <h3>Build your target set</h3>
                         <p>Import a CSV or paste target IDs, then group them for quick filtering.</p>
@@ -335,7 +335,7 @@
                             <li>Pin your main chain list so it stays visible while you scroll.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal reveal-delay-2">
                         <div class="kicker">Step 3</div>
                         <h3>Calibrate refresh</h3>
                         <p>Set your polling rate to balance freshness with API limits.</p>
@@ -351,13 +351,13 @@
 
         <section class="page-section" id="feature-deep-dive">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Features</span>
                     <h2 class="section-title">Built for chain discipline</h2>
                     <p class="section-subtitle">Focus on the tools that keep your target pool clean and your API usage under control.</p>
                 </div>
                 <div class="card-grid feature-grid">
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Target intelligence</h3>
                         <p>Keep the right people in view while you rotate through chains.</p>
                         <ul class="list-plain">
@@ -366,7 +366,7 @@
                             <li>Inline status chips show timers so you do not need to click profiles.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Attack Tracker + bounties</h3>
                         <p>Log every swing and payout so you never double-tap a target mid-chain.</p>
                         <ul class="list-plain">
@@ -375,7 +375,7 @@
                             <li>Sort recent attacks to see who is safe to re-engage.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Rate-limit guardrails</h3>
                         <p>Ship fast without burning your key.</p>
                         <ul class="list-plain">
@@ -384,7 +384,7 @@
                             <li>Clear status bar messaging when a key is invalid or throttled.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Backups and workspace</h3>
                         <p>Move machines or recover quickly with a single file.</p>
                         <ul class="list-plain">
@@ -399,13 +399,13 @@
 
         <section class="page-section" id="workflows">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Workflows</span>
                     <h2 class="section-title">Operate with a repeatable rhythm</h2>
                     <p class="section-subtitle">Use these patterns during a chain or while prepping targets. They pair with keyboard shortcuts and the VS Code inspired sidebar.</p>
                 </div>
                 <div class="card-grid">
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Chain readiness</h3>
                         <p>Stay on top of targets that are attackable right now.</p>
                         <ul class="list-plain">
@@ -414,7 +414,7 @@
                             <li>Open the target profile in one click when you are ready to swing.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Attack review</h3>
                         <p>Keep a clean log so you never double-tap the same target mid-chain.</p>
                         <ul class="list-plain">
@@ -423,7 +423,7 @@
                             <li>Sort attack history by recency to spot repeats.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Backup and restore</h3>
                         <p>Protect your work before long sessions or installs on another machine.</p>
                         <ul class="list-plain">
@@ -438,13 +438,13 @@
 
         <section class="page-section" id="playbook">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Playbook</span>
                     <h2 class="section-title">Chain routine you can reuse</h2>
                     <p class="section-subtitle">A short loop to prep, run, and close out chains without burning calls or losing track of payouts.</p>
                 </div>
                 <div class="card-grid">
-                    <article class="card">
+                    <article class="card reveal">
                         <div class="kicker">Before the chain</div>
                         <h3>Health check and prep</h3>
                         <ul class="list-plain">
@@ -453,7 +453,7 @@
                             <li>Stage attackable and bounty groups with pinned filters.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <div class="kicker">During the chain</div>
                         <h3>Stay on the right targets</h3>
                         <ul class="list-plain">
@@ -462,7 +462,7 @@
                             <li>Use manual bounty tracking to log payouts while you move.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <div class="kicker">After the chain</div>
                         <h3>Reset and recover</h3>
                         <ul class="list-plain">
@@ -477,7 +477,7 @@
 
         <section class="page-section" id="reliability">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Reliability</span>
                     <h2 class="section-title">Safety and troubleshooting</h2>
                     <p class="section-subtitle">A few simple habits keep your API key secure and the app responsive.</p>
@@ -515,26 +515,26 @@
 
         <section class="page-section" id="support">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Support</span>
                     <h2 class="section-title">Need a hand?</h2>
                     <p class="section-subtitle">The fastest way to get help is to share the exact error, your Torn ID, and the step you were taking.</p>
                 </div>
                 <div class="card-grid">
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>File a ticket</h3>
                         <p>Open an issue on GitHub with screenshots and logs.</p>
                         <a class="btn btn-ghost" href="https://github.com/skillerious/TornTargetTrackerV2/issues" target="_blank" rel="noopener noreferrer">Report an issue</a>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Verify your install</h3>
                         <p>Match the release hash from GitHub before running the installer. Re-run the installer if files were quarantined.</p>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Reset in place</h3>
                         <p>Re-enter the API key and restart the app to clear stale sessions. Restore from backup if you reset data.</p>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Stay current</h3>
                         <p>Scan release notes before a chain so you know what changed, what is fixed, and what to avoid.</p>
                         <a class="btn btn-ghost" href="release-notes.html">Read release notes</a>
