--- a/index.html
+++ b/index.html
@@ -3318,7 +3318,7 @@
                     </div>
                     <div class="changelog-content">
                         <h4>Bug Fixes</h4>
-                        <p>Major issues have been thoroughly hunted down and eliminated. Improved stability across all features.</p>
+                        <p>Resolved multiple stability issues and edge cases across all features for a smoother experience.</p>
                     </div>
                 </div>
             </div>
@@ -3414,7 +3414,7 @@
         <div class="section-header reveal">
             <span class="section-tag">More Detail</span>
             <h2 class="section-title">Operator Resources</h2>
-            <p class="section-subtitle">Deep dives stay on their own pages so the landing view remains fast and focused.</p>
+            <p class="section-subtitle">In-depth guides and changelogs to help you configure and run your server.</p>
             <div class="section-actions">
                 <a class="section-link" href="guide.html">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
