--- a/release-notes.html
+++ b/release-notes.html
@@ -271,13 +271,13 @@
 
         <section class="page-section" id="latest">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Latest build</span>
                     <h2 class="section-title">v2.7.9 detailed changelog</h2>
                     <p class="section-subtitle">What shipped, what improved, and how to upgrade without surprises.</p>
                 </div>
                 <div class="version-grid">
-                    <article class="card release-card">
+                    <article class="card release-card reveal">
                         <div class="release-card-header">
                             <div class="pill">Features</div>
                             <span class="release-meta">December 2025</span>
@@ -289,7 +289,7 @@
                             <li>Rate limit popover shows remaining calls and reset timers in real time.</li>
                         </ul>
                     </article>
-                    <article class="card release-card">
+                    <article class="card release-card reveal">
                         <div class="release-card-header">
                             <div class="pill pill-soft">Improvements</div>
                             <span class="release-meta">Reliability</span>
@@ -301,7 +301,7 @@
                             <li>UI polish for spacing, typography, and screenshot load speed.</li>
                         </ul>
                     </article>
-                    <article class="card release-card">
+                    <article class="card release-card reveal">
                         <div class="release-card-header">
                             <div class="pill pill-soft">Fixes</div>
                             <span class="release-meta">Stability</span>
@@ -313,7 +313,7 @@
                             <li>Smoother screenshot shimmer for slower network connections.</li>
                         </ul>
                     </article>
-                    <article class="card release-card">
+                    <article class="card release-card reveal">
                         <div class="release-card-header">
                             <div class="pill pill-soft">Upgrade steps</div>
                             <span class="release-meta">Rollout</span>
@@ -332,7 +332,7 @@
 
         <section class="page-section" id="timeline">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Timeline</span>
                     <h2 class="section-title">Recent releases</h2>
                     <p class="section-subtitle">Highlights from the latest builds. Older releases remain available on GitHub with hashes for verification.</p>
@@ -375,13 +375,13 @@
 
         <section class="page-section" id="compatibility">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Compatibility</span>
                     <h2 class="section-title">Environment and verification</h2>
                     <p class="section-subtitle">Avoid surprises by confirming OS support, key scopes, and download integrity before you roll out a new build.</p>
                 </div>
                 <div class="card-grid">
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Supported setup</h3>
                         <ul class="list-plain">
                             <li>Windows 10/11 64-bit with a stable local drive (avoid network shares).</li>
@@ -389,7 +389,7 @@
                             <li>Clock sync enabled so cooldown and travel timers stay accurate.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Verify every download</h3>
                         <ul class="list-plain">
                             <li>Match the installer hash posted on GitHub releases before running it.</li>
@@ -397,7 +397,7 @@
                             <li>Allow list the installer in your AV only after the hash matches.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>API health checks</h3>
                         <ul class="list-plain">
                             <li>Watch the rate limit popover before long sessions to see available calls.</li>
@@ -418,13 +418,13 @@
 
         <section class="page-section">
             <div class="content-width">
-                <div class="section-header">
+                <div class="section-header reveal">
                     <span class="section-tag">Next up</span>
                     <h2 class="section-title">Planned improvements</h2>
                     <p class="section-subtitle">A short, focused list so contributors can pick up work without guessing.</p>
                 </div>
                 <div class="card-grid">
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Shortcut overlay</h3>
                         <p>Show an in-app overlay of every keyboard shortcut to speed up new operators.</p>
                         <ul class="list-plain">
@@ -432,7 +432,7 @@
                             <li>Printable or copyable so chain leads can onboard faster.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Chain health view</h3>
                         <p>Aggregate target timers, hospitalization windows, and bounty opportunities in one glance.</p>
                         <ul class="list-plain">
@@ -440,7 +440,7 @@
                             <li>Focus mode that hides non-attackable targets during chains.</li>
                         </ul>
                     </article>
-                    <article class="card">
+                    <article class="card reveal">
                         <h3>Deeper logging</h3>
                         <p>Optional verbose logs for bug reports without exposing private API data.</p>
                         <ul class="list-plain">
