--- a/releases.html
+++ b/releases.html
@@ -241,7 +241,7 @@
         <section class="page-section releases-stats-section">
             <div class="content-width">
                 <div class="releases-stats">
-                    <div class="stat-card">
+                    <div class="stat-card reveal">
                         <div class="stat-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
@@ -254,7 +254,7 @@
                             <span class="stat-label">Latest Version</span>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card reveal reveal-delay-1">
                         <div class="stat-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
@@ -268,7 +268,7 @@
                             <span class="stat-label">First V2 Release</span>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card reveal reveal-delay-2">
                         <div class="stat-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <line x1="8" y1="6" x2="21" y2="6"/>
@@ -284,7 +284,7 @@
                             <span class="stat-label">Total Releases</span>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card reveal reveal-delay-3">
                         <div class="stat-icon">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
@@ -302,13 +302,13 @@
         <!-- 2025 Releases -->
         <section class="page-section" id="2025">
             <div class="content-width">
-                <div class="year-header">
+                <div class="year-header reveal">
                     <h2 class="year-title">2025</h2>
                     <span class="year-count">10 releases</span>
                 </div>
 
                 <!-- v2.7.9 -->
-                <article class="release-card release-card-featured" id="v2.7.9">
+                <article class="release-card release-card-featured reveal" id="v2.7.9">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.9</span>
@@ -350,7 +350,7 @@
                 </article>
 
                 <!-- v2.7.8 -->
-                <article class="release-card" id="v2.7.8">
+                <article class="release-card reveal" id="v2.7.8">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.8</span>
@@ -377,7 +377,7 @@
                 </article>
 
                 <!-- v2.7.7 -->
-                <article class="release-card" id="v2.7.7">
+                <article class="release-card reveal" id="v2.7.7">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.7</span>
@@ -404,7 +404,7 @@
                 </article>
 
                 <!-- v2.7.6 -->
-                <article class="release-card" id="v2.7.6">
+                <article class="release-card reveal" id="v2.7.6">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.6</span>
@@ -431,7 +431,7 @@
                 </article>
 
                 <!-- v2.7.5 -->
-                <article class="release-card" id="v2.7.5">
+                <article class="release-card reveal" id="v2.7.5">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.5</span>
@@ -457,7 +457,7 @@
                 </article>
 
                 <!-- v2.7.4 -->
-                <article class="release-card" id="v2.7.4">
+                <article class="release-card reveal" id="v2.7.4">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.4</span>
@@ -480,7 +480,7 @@
                 </article>
 
                 <!-- v2.7.3 -->
-                <article class="release-card" id="v2.7.3">
+                <article class="release-card reveal" id="v2.7.3">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.3</span>
@@ -503,7 +503,7 @@
                 </article>
 
                 <!-- v2.7.2 -->
-                <article class="release-card" id="v2.7.2">
+                <article class="release-card reveal" id="v2.7.2">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.2</span>
@@ -526,7 +526,7 @@
                 </article>
 
                 <!-- v2.7.1 -->
-                <article class="release-card" id="v2.7.1">
+                <article class="release-card reveal" id="v2.7.1">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.1</span>
@@ -553,13 +553,13 @@
         <!-- 2024 Releases -->
         <section class="page-section" id="2024">
             <div class="content-width">
-                <div class="year-header">
+                <div class="year-header reveal">
                     <h2 class="year-title">2024</h2>
                     <span class="year-count">1 release</span>
                 </div>
 
                 <!-- v2.7.0 -->
-                <article class="release-card release-card-major" id="v2.7.0">
+                <article class="release-card release-card-major reveal" id="v2.7.0">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v2.7.0</span>
@@ -587,12 +587,12 @@
         <!-- Legacy Releases -->
         <section class="page-section" id="legacy">
             <div class="content-width">
-                <div class="year-header">
+                <div class="year-header reveal">
                     <h2 class="year-title">Legacy</h2>
                     <span class="year-count">2023 and earlier</span>
                 </div>
 
-                <article class="release-card release-card-legacy">
+                <article class="release-card release-card-legacy reveal">
                     <div class="release-card-header">
                         <div class="release-card-version">
                             <span class="version-number">v1.x - v2.6.x</span>
