--- a/index.html
+++ b/index.html
@@ -618,34 +618,54 @@
         /* Version Badge - Premium Chip Design */
         .version-badge {
             position: absolute;
-            top: 16px;
-            right: 16px;
+            top: 20px;
+            right: 20px;
             z-index: 10;
             display: flex;
             align-items: stretch;
             border-radius: 50px;
             font-family: 'JetBrains Mono', monospace;
             overflow: hidden;
+            background: linear-gradient(135deg, var(--accent-cyan), var(--accent-green));
+            padding: 2px;
             box-shadow:
-                0 4px 24px rgba(0, 0, 0, 0.5),
-                0 0 0 1px rgba(255, 255, 255, 0.1);
+                0 8px 32px rgba(0, 0, 0, 0.7),
+                0 0 30px rgba(0, 245, 212, 0.5),
+                0 0 60px rgba(0, 245, 212, 0.25);
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            animation: badgeGlow 3s ease-in-out infinite;
+        }
+
+        @keyframes badgeGlow {
+            0%, 100% {
+                box-shadow:
+                    0 8px 32px rgba(0, 0, 0, 0.7),
+                    0 0 30px rgba(0, 245, 212, 0.5),
+                    0 0 60px rgba(0, 245, 212, 0.25);
+            }
+            50% {
+                box-shadow:
+                    0 8px 32px rgba(0, 0, 0, 0.7),
+                    0 0 40px rgba(0, 255, 136, 0.6),
+                    0 0 80px rgba(0, 245, 212, 0.35);
+            }
         }
 
         .version-badge:hover {
-            transform: translateY(-2px) scale(1.02);
+            transform: translateY(-3px) scale(1.03);
             box-shadow:
-                0 8px 32px rgba(0, 0, 0, 0.6),
-                0 0 0 1px rgba(0, 245, 212, 0.3),
-                0 0 20px rgba(0, 245, 212, 0.2);
+                0 12px 40px rgba(0, 0, 0, 0.8),
+                0 0 50px rgba(0, 245, 212, 0.6),
+                0 0 100px rgba(0, 245, 212, 0.35);
         }
 
         .version-badge-left {
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 10px 12px;
+            padding: 14px 16px;
             background: linear-gradient(135deg, var(--accent-cyan) 0%, var(--accent-green) 100%);
+            border-radius: 48px 0 0 48px;
             position: relative;
         }
 
@@ -671,63 +691,68 @@
         }
 
         .version-badge-icon {
-            width: 18px;
-            height: 18px;
+            width: 24px;
+            height: 24px;
             color: var(--bg-primary);
             position: relative;
             z-index: 1;
+            filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
         }
 
         .version-badge-right {
             display: flex;
             align-items: center;
-            gap: 10px;
-            padding: 10px 16px 10px 14px;
-            background: rgba(10, 10, 15, 0.95);
-            backdrop-filter: blur(10px);
+            gap: 12px;
+            padding: 12px 20px 12px 16px;
+            background: rgba(8, 8, 12, 0.98);
+            border-radius: 0 48px 48px 0;
+            backdrop-filter: blur(12px);
         }
 
         .version-badge-info {
             display: flex;
             flex-direction: column;
-            gap: 1px;
+            gap: 2px;
         }
 
         .version-badge-label {
-            font-size: 0.55rem;
+            font-size: 0.65rem;
             text-transform: uppercase;
-            letter-spacing: 1.5px;
+            letter-spacing: 2px;
             color: var(--accent-cyan);
-            font-weight: 600;
-            opacity: 0.9;
+            font-weight: 700;
+            text-shadow: 0 0 10px rgba(0, 245, 212, 0.5);
         }
 
         .version-badge-number {
-            font-size: 1rem;
-            font-weight: 700;
+            font-size: 1.35rem;
+            font-weight: 800;
             color: var(--text-primary);
-            letter-spacing: 0.5px;
+            letter-spacing: 1px;
             line-height: 1;
+            text-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
         }
 
         .version-badge-status {
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 24px;
-            height: 24px;
-            background: rgba(0, 255, 136, 0.15);
+            width: 28px;
+            height: 28px;
+            background: rgba(0, 255, 136, 0.2);
             border-radius: 50%;
             position: relative;
         }
 
         .version-badge-status::before {
             content: '';
-            width: 8px;
-            height: 8px;
+            width: 12px;
+            height: 12px;
             background: var(--accent-green);
             border-radius: 50%;
-            box-shadow: 0 0 8px var(--accent-green);
+            box-shadow:
+                0 0 12px var(--accent-green),
+                0 0 24px rgba(0, 255, 136, 0.5);
             animation: statusPulse 2s ease-in-out infinite;
         }
 
@@ -736,18 +761,18 @@
             position: absolute;
             inset: 0;
             border-radius: 50%;
-            border: 1px solid rgba(0, 255, 136, 0.3);
+            border: 2px solid rgba(0, 255, 136, 0.4);
             animation: statusRing 2s ease-in-out infinite;
         }
 
         @keyframes statusPulse {
             0%, 100% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(0.85); opacity: 0.7; }
+            50% { transform: scale(0.9); opacity: 0.8; }
         }
 
         @keyframes statusRing {
-            0%, 100% { transform: scale(1); opacity: 0.5; }
-            50% { transform: scale(1.1); opacity: 0.2; }
+            0%, 100% { transform: scale(1); opacity: 0.6; }
+            50% { transform: scale(1.15); opacity: 0.3; }
         }
 
         /* Features Section */
